[feature]: implement timetable scrolling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       padding: 0;
       font-family: 'HelveticaNeue';
     }
+    body {
+      overflow: hidden;
+    }
   </style>
 </head>
 <body>
