--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       margin: 0;
       padding: 0;
       font-family: 'HelveticaNeue';
+      box-sizing: border-box;
     }
     body {
-      overflow: hidden;
+      /*overflow: hidden;*/
     }
   </style>
 </head>
