--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     body {
       /*overflow: hidden;*/
     }
+    /* DayPicker styles */
+
+    .is-hidden {
+      display: none;
+    }
+
   </style>
 </head>
 <body>
