[feature]: finished css grid implementation

--- a/grid.html
+++ b/grid.html
@@ -49,11 +49,15 @@
       grid-template-columns: repeat(16, 60px);
     }
 
+    .room-1 {
+
+    }
+
     .rooms {
       grid-row: 2;
       background: yellow;
       display: grid;
-      grid-template-rows: repeat(3, 86px);
+      grid-template-rows: repeat(3, minmax(126px, auto));
       align-items: center;
     }
 
@@ -98,8 +102,22 @@
       <div>
         Сатурн
       </div>
+      <div class='room-2'>
+        <p>Семь пятниц</p>
+        <p>Семь пятниц</p>
+        <p>Семь пятниц</p>
+        <p>Семь пятниц</p>
+        <p>Семь пятниц</p>
+
+      </div>
       <div>
-        Семь пятниц
+         Yellow Submarine
+      </div>
+      <div>
+         Yellow Submarine
+      </div>
+      <div>
+         Yellow Submarine
       </div>
       <div>
          Yellow Submarine
@@ -116,6 +134,15 @@
       <div class='room-events'>
         <div class='event'></div>
       </div>
+      <div class='room-events'>
+        <div class='event'></div>
+      </div>
+      <div class='room-events'>
+        <div class='event'></div>
+      </div>
+      <div class='room-events'>
+        <div class='event'></div>
+      </div>  
     </div>
   </div>
 </body>
